stateDiagram-v2
    state "Idle" as idle
    state "Buffering (debounce)" as buffering
    state "Evaluating Context" as evaluating_context
    state "Drafting Response" as drafting_response
    state "Waiting Tool" as waiting_tool
    state "Breakpoint Miss" as breakpoint_miss
    [*] --> idle
    idle --> evaluating_context : handle_user_message
    buffering --> evaluating_context : debounce_fire
    evaluating_context --> drafting_response : compile_context
    evaluating_context --> breakpoint_miss : no_breakpoint
    drafting_response --> waiting_tool : tool_call [tool target definido]
    drafting_response --> idle : turn_closed
    waiting_tool --> evaluating_context : tool_result [timeout no alcanzado (TOOL_TIMEOUT_MS)]
    waiting_tool --> evaluating_context : tool_timeout
    breakpoint_miss --> idle : turn_closed